# flat-finder

./: .dockerignore  .example-secrets.yaml  .gitignore  Dockerfile  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
data/: create_tables.sql  message_template.html
flat_finder/: main.py  parser.py  telegram.py  utils.py
